Thu May  1 18:27:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ETCL/TAO_ETCL_Constraint.cpp:
        * tao/ETCL/TAO_ETCL_Constraint.h:
          Use a full include path

        * tao/Leader_Follower.h:
          Docu change

Thu May  1 18:09:05 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_ACE.mwc:

          Removed $ACE_ROOT/MonitorControl/MonitorControl.mpc, this MPC
          file has been relocated and is now covered under $ACE_ROOT/ace.

        * tao/Monitor/Monitor_Impl.cpp:
        * tests/Monitor/Marshal_Buffer/client.cpp:

          Changed header include paths to reflect the relocation of
          the MonitorControl library.

Wed Apr 30 17:16:54 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Monitor/Marshal_Buffer/client.cpp:
        * tests/Monitor/Marshal_Buffer/server.cpp:

          Added include to pull in ACE_PRINT_EXCEPTION and
          ACE_ANY_EXCEPTION macros, which were not recognized
          in some Debian builds.

Wed Apr 30 17:01:24 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Monitor/Marshal_Buffer/client.cpp:
        * tests/Monitor/Marshal_Buffer/marshal_buffer.mpc:

          Removed ENABLE_MONITORS macro which is no longer used.

Wed Apr 30 12:13:59 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/ast/ast_union.cpp:

          Added missing break.

        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be_include/be_helper.h:

          Ugly macros to get this to compile portably.

Wed Apr 30 11:57:18 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp:

          Restored the original order of included header files to
          eliminate template-related compile errors with gcc.

Wed Apr 30 11:55:04 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Portable_Interceptors/PICurrent/run_test.pl:
        * tests/Portable_Interceptors/PICurrent/server.cpp:
